--- a/home.html
+++ b/home.html
@@ -2,9 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home</title>
+    <link rel = "stylesheet" href ="homestyle.css" type = "text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Jaldi&display=swap" rel="stylesheet">
+
 </head>
 <body>
+    <div id = container>
+        <div class = center>
+            <h1>Pandas</h1>
+        </div>
+        <nav>
+            <ul>
+                <li><a class = "active">Home</a></li>
+                <li><a id = "hab">Habitat</a></li>
+                <li><a>Food</a></li>
+                <li><a>Fun Facts</a></li>
+                <li><a>Contact</a></li>
+            </ul>
+        </nav>
+        <div id = "logo">
+            <img class = "static" src="images/panda%20dance.gif" alt="Panda">
+        </div>
+    </div>
 
 </body>
 </html>
