--- a/home.html
+++ b/home.html
@@ -5,25 +5,25 @@
     <title>Home</title>
     <link rel = "stylesheet" href ="homestyle.css" type = "text/css" />
     <link href="https://fonts.googleapis.com/css?family=Jaldi&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Space+Mono&display=swap" rel="stylesheet">
+    <link rel = "javascript" href="homepagejs.js" type="text/javascript">
 </head>
 <body>
     <div id = container>
+        <div id = "bg-image"></div>
         <div class = center>
             <h1>Pandas</h1>
         </div>
         <nav>
             <ul>
                 <li><a class = "active">Home</a></li>
-                <li><a id = "hab">Habitat</a></li>
-                <li><a>Food</a></li>
+                <li><a>Habitat</a></li>
+                <li><a>Diet</a></li>
                 <li><a>Fun Facts</a></li>
                 <li><a>Contact</a></li>
             </ul>
         </nav>
-        <div id = "logo">
-            <img class = "static" src="images/panda%20dance.gif" alt="Panda">
-        </div>
+        <img class = "static" src="images/panda%20dance.gif" alt="Panda">
     </div>
 
 </body>
