--- a/home.html
+++ b/home.html
@@ -26,7 +26,10 @@
             <h3><a>About</a></h3>
         </div>
 
-        <div id = "dance"><img src="images/panda%20dance.gif" alt="Panda"></div>
+        <div id = "dance">
+            <img id = "static" src="images/static%20panda.png" onmouseenter="this.src = 'images/panda%20dance.gif';" onmouseleave="this.src = 'images/static%20panda.png';" alt="Panda">
+
+        </div>
 
     </div>
 
