--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Space+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Animate.css" type="text/css"/>
 </head>
-<body>
+<body id = "aboutbod">
 <div id = "">
     <nav class="">
         <ul>
