--- a/fun facts.html
+++ b/fun facts.html
@@ -10,11 +10,11 @@
 <body>
 <div id = "container">
 
-    <nav class = "slideInDown animated">
+    <nav>
         <ul>
             <li><a  href = "home.html">Home</a></li>
             <li><a>Habitat</a></li>
-            <li><a>Diet</a></li>
+            <li><a href = "diet.html">Diet</a></li>
             <li><a class = "active" href = "fun%20facts.html">Fun Facts</a></li>
             <li><a>Contact</a></li>
         </ul>
