--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a class = "active" href = "home.html">Home</a></li>
                 <li><a>Habitat</a></li>
-                <li><a>Diet</a></li>
+                <li><a href = "diet.html">Diet</a></li>
                 <li><a href = "fun%20facts.html">Fun Facts</a></li>
                 <li><a>Contact</a></li>
             </ul>
@@ -23,7 +23,7 @@
             <h1>Pandas</h1>
         </div>
         <div id = "under" class = "delay-2s fadeInUp animated">
-            <h3><a>About</a></h3>
+            <a href = "about.html"><h3>About</h3></a>
         </div>
 
         <div id = "dance">
