--- a/about.html
+++ b/about.html
@@ -22,14 +22,13 @@
 </div>  
 <div id = "facts">
         <h2 id = "mytitle">Front End Team</h2>
-        <h2 id="ok"></h2>
-       <a href="https://app.slack.com/client/TN1H1KD7U/CNEAP77QQ/user_profile/UNFFZFYRE"> <div class="people" id = "one"><img src = "images/shakib.jpg" width = 100px height = 100px class="pic"><h3>Shakib</h3></div></a>
-       <a href="https://app.slack.com/client/TN1H1KD7U/CNEAP77QQ/user_profile/UNFG84Y3F"> <div class="people" id = "two"><img src = "images/kusum.jpg" width = 100px height = 100px class="pic"><h3>Kusum</h3></div></a>
-       <a href="https://app.slack.com/client/TN1H1KD7U/CNEAP77QQ/user_profile/UNHN7HR1U"> <div class="people" id = "three"><img src = "images/gay.jpg" width = 100px height = 100px class="pic"><h3>Adeniyi</h3></div></a>
-        <img src="https://media3.giphy.com/media/2YiYg1mxaxtIqttQsp/source.gif" height=50px width=50px id="crown">
-       <a href="https://app.slack.com/client/TN1H1KD7U/CNEAP77QQ/user_profile/UN424GQ2X"> <div class="people" id = "four"><img src = "images/saul.jpg" width = 100px height = 100px class="pic"><h3>Saul</h3></div></a>
-       <a href="https://app.slack.com/client/TN1H1KD7U/CNEAP77QQ/user_profile/UNHBVDQPR"> <div class="people" id = "five"><img src = "images/aarti.jpg" width = 100px height = 100px class="pic"><h3>Aarti</h3></div></a>
-       <a href="https://app.slack.com/client/TN1H1KD7U/CNEAP77QQ/user_profile/UNFFY1XQQ"> <div class="people" id = "six"><img src = "images/mark.jpg" width = 100px height = 100px class="pic"><h3>Mark</h3></div></a>
+       <a href="https://app.slack.com/client/TN1H1KD7U/CNEAP77QQ/user_profile/UNFFZFYRE"> <div class="people delay-1s fadeInLeft animated" id = "one"><img src = "images/shakib.jpg" class="pic"><h3>Shakib</h3></div></a>
+       <a href="https://app.slack.com/client/TN1H1KD7U/CNEAP77QQ/user_profile/UNFG84Y3F"> <div class="people delay-3s fadeIn animated" id = "two"><img src = "images/kusum.jpg"class="pic"><h3>Kusum</h3></div></a>
+       <a href="https://app.slack.com/client/TN1H1KD7U/CNEAP77QQ/user_profile/UNHN7HR1U"> <div class="people delay-2s fadeInRight animated" id = "three"><img src = "images/gay.jpg" class="pic"><h3>Adeniyi</h3></div></a>
+        <img src="https://media3.giphy.com/media/2YiYg1mxaxtIqttQsp/source.gif" class = "delay-3s fadeInDown animated" height=50px width=50px id="crown">
+       <a href="https://app.slack.com/client/TN1H1KD7U/CNEAP77QQ/user_profile/UN424GQ2X"> <div class="people delay-2s fadeInLeft animated" id = "four"><img src = "images/saul.jpg"class="pic"><h3>Saul</h3></div></a>
+       <a href="https://app.slack.com/client/TN1H1KD7U/CNEAP77QQ/user_profile/UNHBVDQPR"> <div class="people delay-3s fadeIn animated" id = "five"><img src = "images/aarti.jpg"  class="pic"><h3>Aarti</h3></div></a>
+       <a href="https://app.slack.com/client/TN1H1KD7U/CNEAP77QQ/user_profile/UNFFY1XQQ"> <div class="people delay-1s fadeInRight animated" id = "six"><img src = "images/mark.jpg" class="pic"><h3>Mark</h3></div></a>
     </div>
 </body>
 </html>
