--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 <div id = "">
     <nav class="">
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a>Habitat</a></li>
             <li><a href="diet.html">Diet</a></li>
             <li><a href="fun%20facts.html">Fun Facts</a></li>
