--- a/diet.html
+++ b/diet.html
@@ -11,7 +11,7 @@
 <div id="container">
     <nav class="">
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a>Habitat</a></li>
             <li><a class = "active" href="diet.html">Diet</a></li>
             <li><a href="fun%20facts.html">Fun Facts</a></li>
