--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id = container>
         <nav class = "delay-1s slideInDown animated">
             <ul>
-                <li><a class = "active" href = "home.html">Home</a></li>
+                <li><a class = "active" href = "index.html">Home</a></li>
                 <li><a>Habitat</a></li>
                 <li><a href = "diet.html">Diet</a></li>
                 <li><a href = "fun%20facts.html">Fun Facts</a></li>
