--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="shortcut icon" href="images/panda.png" />
+
     <meta charset="UTF-8">
     <title>Home</title>
     <link rel = "stylesheet" href ="homestyle.css" type = "text/css" />
