--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="shortcut icon" href="images/panda.png" />
     <meta charset="UTF-8">
     <title>About</title>
     <link rel="stylesheet" href="styles.css" type="text/css"/>
