--- a/diet.html
+++ b/diet.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="shortcut icon" href="images/panda.png" />
+
+    <meta charset="UTF-8">
+    <title>Diet</title>
     <link rel="stylesheet" href="styles.css" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Jaldi&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Space+Mono&display=swap" rel="stylesheet">
