--- a/diet.html
+++ b/diet.html
@@ -16,7 +16,7 @@
     <nav class="">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a>Habitat</a></li>
+            <li><a href = "habitat.html">Habitat</a></li>
             <li><a class = "active" href="diet.html">Diet</a></li>
             <li><a href="fun%20facts.html">Fun Facts</a></li>
             <li><a>Contact</a></li>
