--- a/fun facts.html
+++ b/fun facts.html
@@ -16,14 +16,14 @@
     <nav>
         <ul>
             <li><a  href = "index.html">Home</a></li>
-            <li><a>Habitat</a></li>
+            <li><a href = "habitat.html">Habitat</a></li>
             <li><a href = "diet.html">Diet</a></li>
             <li><a class = "active" href = "fun%20facts.html">Fun Facts</a></li>
             <li><a>Contact</a></li>
         </ul>
     </nav>
     <div id = "facts">
-        <h1 class = "fadeIn animated">Fun Facts about Pandas</h1>
+        <h1 class = "fadeIn animated">Fun Facts</h1>
         <p1 class = "fadeIn animated">Along with how adorable they look, pandas are also very intriguing animals! Here are 15 fun facts about pandas</p1>
 
         <h2 class = "delay-1s slideInLeft animated">1. Pandas have been around for a pretty long time</h2>
