--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <nav class="">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a>Habitat</a></li>
+            <li><a href = "habitat.html">Habitat</a></li>
             <li><a href="diet.html">Diet</a></li>
             <li><a href="fun%20facts.html">Fun Facts</a></li>
             <li><a>Contact</a></li>
