--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class = "delay-1s slideInDown animated">
             <ul>
                 <li><a class = "active" href = "index.html">Home</a></li>
-                <li><a>Habitat</a></li>
+                <li><a href = "habitat.html">Habitat</a></li>
                 <li><a href = "diet.html">Diet</a></li>
                 <li><a href = "fun%20facts.html">Fun Facts</a></li>
                 <li><a>Contact</a></li>
