--- a/habitat.html
+++ b/habitat.html
@@ -17,7 +17,7 @@
         <li><a class = "active" href = "habitat.html">Habitat</a></li>
         <li><a href = "diet.html">Diet</a></li>
         <li><a href = "fun%20facts.html">Fun Facts</a></li>
-        <li><a>Contact</a></li>
+        <li><a href ="contact.html">Contact</a></li>
     </ul>
 </nav>
 <div id="facts">
