--- a/fun facts.html
+++ b/fun facts.html
@@ -19,7 +19,7 @@
             <li><a href = "habitat.html">Habitat</a></li>
             <li><a href = "diet.html">Diet</a></li>
             <li><a class = "active" href = "fun%20facts.html">Fun Facts</a></li>
-            <li><a>Contact</a></li>
+            <li><a href = "contact.html">Contact</a></li>
         </ul>
     </nav>
     <div id = "facts">
