--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,8 @@
 
 
 <div id="main">
-    <h1 id = "contact" class="delay-1s fadeIn animated"> Contact </h1>
-    <form action="https://docs.google.com/forms/u/1/d/e/1FAIpQLSehn2GJ6VX3zxQEnA-rt8e1KzRx8PrQC28zWseANvDXh2_jJg/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true;">
+    <h1 id = "contact" class="fadeIn animated"> Contact </h1>
+    <form class = "delay-1s fadeIn animated"action = "https://docs.google.com/forms/u/1/d/e/1FAIpQLSehn2GJ6VX3zxQEnA-rt8e1KzRx8PrQC28zWseANvDXh2_jJg/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true;">
         <div class="row">
 
             <label class="required" for="name"><h2 class = "labels">Name</h2></label><br/>
