--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="shortcut icon" href="images/panda.png" />
     <link rel="stylesheet" href="styles.css" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Jaldi&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Space+Mono&display=swap" rel="stylesheet">
