--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,6 @@
     </ul>
 </nav>
 
-
 <div id="main">
     <h1 id = "contact" class="fadeIn animated"> Contact </h1>
     <form class = "delay-1s fadeIn animated"action = "https://docs.google.com/forms/u/1/d/e/1FAIpQLSehn2GJ6VX3zxQEnA-rt8e1KzRx8PrQC28zWseANvDXh2_jJg/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true;">
@@ -40,11 +39,12 @@
         </div>
         <div class="row">
             <label class="required" for="message"><h2 class = "labels">Message</h2></label><br/>
-            <textarea id="message" class="input" name="entry.379031906" rows="7" cols="30"></textarea><br/>
+            <textarea id="message" class="message" name="entry.379031906" rows="7" cols="30"></textarea><br/>
             <span id="message_validation" class="error_message"></span>
         </div>
         <input id="submit_button" type="submit" value="Send email"/>
     </form>
-</div>
+
+    </div>
 </body>
 </html>
