--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="shortcut icon" href="images/panda.png" />
+    <title>Contact</title>
     <link rel="stylesheet" href="styles.css" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Jaldi&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Space+Mono&display=swap" rel="stylesheet">
